# rtos-gps

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data_record  gps_sensor  main  record.csv  test  test_file  velocimeter
src/client/: 2023-07-10_12:37:42.csv  client  client.c  client.h  route.csv
src/server/: a.out  ab  aux_velocimeter.py  blocker_tracker.c  cmd_parser.c  command_control  command_control.c  data_record.c  gps_sensor.c  main.c  makefile  record.csv  route.csv  route.txt  speed_limiter.c  threads.c  threads_aux.c  timers.c  velocimeter.c  velocimeter.simulacrum
src/server/headers/: blocker_tracker.h  cmd_parser.h  command_control.h  data_record.h  gps_sensor.h  sketch.h  speed_limiter.h  threads.h  threads_aux.h  timers.h  velocimeter.h
